# minecraft-pixel-art-generator

./: README.md
Notebooks/: Prepared_DataLoader.ipynb  finalv2_condtional_vq_vae_transformer_minecraft.ipynb  utils.py  vq-vae-minecraft.ipynb  vq-vae-try.ipynb
c-vq-vae-project/: data_module.py  inputs.json  main.py  model_module.py  pyproject.toml  training_module.py  transformer_module.py
genfr-fastapi/: README.md  app.py  main.py  mapping.py  pyproject.toml  requirements.txt  transformer.py  vq_vae.py
genfr-nest/: README.md  nest-cli.json  package-lock.json  package.json
genfr-nest/prisma/: schema.prisma  seed.ts
genfr-nest/src/: app.module.ts  app.service.ts  main.ts
genfr-nest/src/auth/: auth.controller.ts  auth.service.ts
genfr-nest/src/auth/dto/: register-response.dto.ts
genfr-nest/src/email/: email-cleanup.service.ts  email.module.ts  email.service.ts
genfr-nest/src/email/templates/: reset-password.hbs  verify-email.hbs
genfr-nest/src/image/: image.controller.spec.ts  image.controller.ts  image.module.ts  image.service.spec.ts  image.service.ts
genfr-nest/src/image/dto/: create-image-response.dto.ts  create-image.dto.ts  update-image.dto.ts
genfr-nest/src/user/: user.service.ts
