[project]
name = "c-vq-vae-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.1.0",
    "image>=1.5.33",
    "ipython>=9.5.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
